[package]
name = "crypto"
version = "0.1.0"
authors = ["a186r <hi.aewalle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edit-distance = "2.0"
parity-crypto = "0.4.0"
parity-secp256k1 = { git = "https://github.com/a186r/rust-secp256k1.git" }
rand = "0.6"
parity-wordlist = "1.3"
lazy_static = "1.0"
ethereum-types = "0.6.0"
zeroize = "0.9.1"
rustc-hex = "1.0"